--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "experiment-0001",
+  "name": "conways-game-of-life",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,12 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "latest",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "latest",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1"
   }
