--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "latest",
-    "uuid": "^8.3.2"
+    "styled-components": "latest"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "latest",
